<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:font="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingStart="50dp"
  android:paddingEnd="50dp"
  android:background="#f5f5f5"
  tools:context=".PHR.LoginScreen.LoginScreen">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@mipmap/logo_blue"/>

    <com.silverkey.Views.TextViewWithFont
      android:textStyle="bold"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:gravity="center"
      android:text="@string/create_account"
      android:textColor="@color/black"
      android:textSize="19sp"
      font:name="Cocon"
      font:type="bold"/>

    <com.silverkey.Views.EditTextWithFont
      android:id="@+id/username_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:paddingStart="15dp"
      android:paddingEnd="15dp"
      android:background="@drawable/enter_name_bg"
      android:hint="@string/username"
      android:inputType="text"
      android:minHeight="40dp"
      android:textColorHint="@color/md_grey_700"
      android:textSize="17sp"/>

    <com.silverkey.Views.EditTextWithFont
      android:id="@+id/email_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:paddingStart="15dp"
      android:paddingEnd="15dp"
      android:background="@drawable/enter_name_bg"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:minHeight="40dp"
      android:textColorHint="@color/md_grey_700"
      android:textSize="17sp"/>

    <com.silverkey.Views.EditTextWithFont
      android:id="@+id/password_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:paddingStart="15dp"
      android:paddingEnd="15dp"
      android:background="@drawable/enter_name_bg"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:minHeight="40dp"
      android:textColorHint="@color/md_grey_700"
      android:textSize="17sp"/>

    <Button
      android:id="@+id/enter_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:background="@drawable/enter_btn_bg"
      android:minHeight="40dp"
      android:text="@string/enter"
      android:textColor="@color/white"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <com.silverkey.Views.TextViewWithFont
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:textColor="@color/black"
        android:textSize="14sp"
        font:name="Cocon"/>

      <com.silverkey.Views.TextViewWithFont
        android:id="@+id/login_text_view"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="15sp"
        font:name="Cocon"
        font:type="bold"/>

    </LinearLayout>

  </LinearLayout>


</ScrollView>
