<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@color/background"
  >
  <LinearLayout
    android:id="@+id/layout_header"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@color/colorPrimary"
    >
    <TextView
      android:id="@+id/tv_tittle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="8dp"
      android:text="@string/tittle_alert_view"
      android:textColor="@color/white"
      android:textSize="18sp"

      />
  </LinearLayout>
  <com.silverkey.Views.TextViewWithFont
    android:id="@+id/tv_hint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/hint_alert_view"
    android:textColor="@color/dark_gray"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/layout_header"
    />
  <EditText
    android:id="@+id/et_file_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="@string/file_name_hint"
    android:textColor="@color/dark_gray"
    android:textColorHint="@color/md_grey_500"
    android:background="@android:color/transparent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_hint"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteY="41dp"/>
  <View
    android:id="@+id/view_alert_dialog"
    android:layout_width="0dp"
    android:layout_height="2dp"
    android:layout_marginTop="2dp"
    android:background="@color/md_grey_300"
    app:layout_constraintTop_toBottomOf="@+id/et_file_name"/>
  <Button
    android:id="@+id/bt_no"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="8mm"
    android:background="@drawable/roundedbutton"
    android:text="@string/no_alert_view"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_file_name"
    tools:layout_editor_absoluteX="35dp"
    tools:layout_editor_absoluteY="139dp"/>

  <Button
    android:id="@+id/bt_yes"
    android:layout_width="80dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8mm"
    android:background="@drawable/roundedbutton"
    android:text="@string/yes_alert_view"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_file_name"
    tools:layout_editor_absoluteX="35dp"
    tools:layout_editor_absoluteY="139dp"/>

</android.support.constraint.ConstraintLayout>