<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_weight="4"
  android:background="@color/white"
  android:orientation="vertical"
  >
  <LinearLayout
    android:id="@+id/layout_download"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal"
    >
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@mipmap/download_icon"
      />
    <com.silverkey.Views.TextViewWithFont
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/download_bottom_sheet"
      android:textColor="@color/dark_gray"
      android:textSize="14sp"
      />
  </LinearLayout>
  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/md_grey_300"
    />
  <LinearLayout
    android:id="@+id/layout_share"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:padding="8dp"
    android:orientation="horizontal"
    >
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@mipmap/share_icon"
      />
    <com.silverkey.Views.TextViewWithFont
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/share_bottom_sheet"
      android:textColor="@color/dark_gray"
      android:textSize="14sp"
      />
  </LinearLayout>
  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/md_grey_300"
    />
  <LinearLayout
    android:id="@+id/layout_move"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:padding="8dp"
    android:orientation="horizontal"
    >
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@mipmap/move_icon"
      />
    <com.silverkey.Views.TextViewWithFont
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/move_bottom_sheet"
      android:textColor="@color/dark_gray"
      android:textSize="14sp"
      />
  </LinearLayout>
  <View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_gravity="center_horizontal"
    android:background="@color/md_grey_300"
    />
  <LinearLayout
    android:id="@+id/layout_remove"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="left"
    android:padding="8dp"
    android:orientation="horizontal"
    >
    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:src="@mipmap/delete_icon"
      />
    <com.silverkey.Views.TextViewWithFont
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/remove_bottom_sheet"
      android:textColor="@color/dark_gray"
      android:textSize="14sp"
      />
  </LinearLayout>


</LinearLayout>